--- a/app/src/main/res/layout/fragment_play_music.xml
+++ b/app/src/main/res/layout/fragment_play_music.xml
@@ -64,6 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="15dp"
             android:gravity="center_horizontal"
+            android:layout_marginTop="5dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -132,7 +133,6 @@
                 android:layout_alignParentTop="true"
                 android:layout_toStartOf="@+id/play_pause"
                 android:layout_marginRight="12dp"
-
                 android:src="@drawable/play_btn_prev_selector" />
 
             <ImageView
