--- a/app/src/main/res/layout/popuwindow.xml
+++ b/app/src/main/res/layout/popuwindow.xml
@@ -10,7 +10,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="100dp"
-    android:layout_height="230dp"
+    android:layout_height="235dp"
     android:background="@drawable/menu_bg"
     android:orientation="vertical"
     android:gravity="center_horizontal"
@@ -23,7 +23,7 @@
         android:layout_height="33dp"
        android:layout_margin="3dp"
         android:background="@drawable/button_style1"
-        android:text="查看详情"/>
+        android:text="标题"/>
 
 
 
