增加下载百度在线的音乐，修复各种bug

--- a/app/src/main/res/drawable/header_bg.xml
+++ b/app/src/main/res/drawable/header_bg.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:endColor="#FFD700"
+        android:endColor="#FFF5EE"
         android:startColor="#FF34B3"
-        android:centerColor="@color/blue"/>
+        android:centerColor="	#FFA07A"/>
 </shape>
