--- a/app/src/main/res/layout/activity_online_music_list_header.xml
+++ b/app/src/main/res/layout/activity_online_music_list_header.xml
@@ -8,7 +8,12 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/play_page_default_bg" />
+        android:src="@drawable/profile_bg" />
+    <ImageView
+        android:layout_width="250dp"
+        android:layout_height="150dp"
+        android:src="@drawable/me"
+        android:layout_gravity="end"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -50,11 +55,12 @@
 
             <TextView
                 android:id="@+id/tv_comment"
+                android:background="#A6FFFFFF"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:text="该榜单是根据百度音乐平台歌曲每周播放量自动生成的数据榜单，统计范围为百度音乐平台上的全部歌曲，每日更新一次"
-                android:textColor="@color/white"
+                android:textColor="#FF1493"
                 android:textSize="14sp" />
         </LinearLayout>
     </LinearLayout>
