--- a/app/src/main/res/layout/fragmen2_layout.xml
+++ b/app/src/main/res/layout/fragmen2_layout.xml
@@ -41,6 +41,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="30dp"
+    android:divider="@null"
     android:background="@drawable/button_style"
     android:id="@+id/online_sheetlist">
 </ListView>
