--- a/app/src/main/res/layout/fragment_wangyi.xml
+++ b/app/src/main/res/layout/fragment_wangyi.xml
@@ -7,6 +7,7 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:divider="@null"
         android:background="@drawable/button_style"
         android:id="@+id/wangyilist">
 
