--- a/app/src/main/res/layout/fragment_play_music.xml
+++ b/app/src/main/res/layout/fragment_play_music.xml
@@ -127,12 +127,12 @@
                 android:src="@drawable/play_mode_level_list" />
 
             <ImageView
+                android:id="@+id/pre"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:id="@+id/pre"
                 android:layout_alignParentTop="true"
+                android:layout_marginEnd="11dp"
                 android:layout_toStartOf="@+id/play_pause"
-                android:layout_marginRight="12dp"
                 android:src="@drawable/play_btn_prev_selector" />
 
             <ImageView
@@ -143,16 +143,22 @@
                 android:src="@drawable/play_btn_play_pause_selector" />
 
             <ImageView
+                android:id="@+id/next"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:layout_marginLeft="12dp"
                 android:layout_alignParentTop="true"
-                android:layout_marginStart="21dp"
-                android:id="@+id/next"
+                android:layout_marginStart="12dp"
                 android:layout_toEndOf="@+id/play_pause"
                 android:src="@drawable/play_btn_next_selector" />
 
-
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:id="@+id/play_list"
+                android:layout_alignParentTop="true"
+                android:layout_toEndOf="@+id/next"
+                android:scaleType="center"
+                android:src="@drawable/play_list_menu" />
         </RelativeLayout>
     </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
