加入保存上次退出时正在播放的音乐

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -147,7 +147,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:singleLine="true"
-                    android:text="想象之中"
+                    android:text="宏晨有你"
                     android:textSize="25sp"
                     app:layout_constraintBottom_toTopOf="@+id/play_bar_geshou"
                     app:layout_constraintStart_toStartOf="parent"
@@ -160,7 +160,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
                     android:layout_marginTop="2dp"
-                    android:text="许嵩"
+                    android:text="vaiyee"
                     android:textColor="#8B4500"
                     android:textSize="15sp"
                     app:layout_constraintBottom_toBottomOf="parent"
