--- a/app/src/main/res/layout/geci_edit.xml
+++ b/app/src/main/res/layout/geci_edit.xml
@@ -52,12 +52,6 @@
             android:id="@+id/yellow"
             android:layout_marginLeft="10dp"
             android:background="#EEEE00"/>
-        <com.vaiyee.hongmusic.CircleImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:id="@+id/white"
-            android:layout_marginLeft="10dp"
-            android:background="	#FFFFFF"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -82,13 +76,13 @@
             android:layout_height="40dp"
             android:id="@+id/s_red"
             android:layout_marginLeft="10dp"
-            android:background="#FAEBD7"/>
+            android:background="#FFB90F"/>
         <com.vaiyee.hongmusic.CircleImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:id="@+id/s_fen_red"
             android:layout_marginLeft="10dp"
-            android:background="#CDC8B1"/>
+            android:background="#FFB6C1"/>
         <com.vaiyee.hongmusic.CircleImageView
             android:layout_width="40dp"
             android:id="@+id/s_green"
@@ -106,13 +100,7 @@
             android:layout_height="40dp"
             android:id="@+id/s_yellow"
             android:layout_marginLeft="10dp"
-            android:background="#545454"/>
-        <com.vaiyee.hongmusic.CircleImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:id="@+id/s_white"
-            android:layout_marginLeft="10dp"
-            android:background="#FFFFFF"/>
+            android:background="#000000"/>
     </LinearLayout>
     <Button
         android:layout_width="match_parent"
