首1.页加入banner，2.加入海量推荐歌单，3.加入音效调节（待完善），4.优化UI体验

--- a/app/src/main/res/drawable/button_ripple.xml
+++ b/app/src/main/res/drawable/button_ripple.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#1AFFFFFF" />
-    <corners android:radius="20dp" />
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@color/colorAccent" android:state_pressed="false"/>  //点击时手指松开的背景
+    <item android:drawable="@color/blue" android:state_pressed="true"/>   //点击时手指未松开的背景
 
-</shape>
+</selector>
