--- a/app/src/main/res/layout/fragment1_layout.xml
+++ b/app/src/main/res/layout/fragment1_layout.xml
@@ -1,17 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:layout_editor_absoluteY="25dp">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
+    <android.support.design.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <ListView
+    <com.jude.rollviewpager.RollPagerView
+        android:layout_width="match_parent"
+        android:id="@+id/rollview"
+        android:layout_height="150dp"
+        app:layout_scrollFlags="scroll|enterAlways|snap">
+    </com.jude.rollviewpager.RollPagerView>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/button_style"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:id="@+id/localmusic_list">
-    </ListView>
+    </android.support.v7.widget.RecyclerView>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,4 +36,5 @@
         android:visibility="gone"
         android:textColor="@color/red"
         android:text="拒绝了授权，无法扫描本地音乐，不能显示歌词,请重新打开程序授权"/>
-</FrameLayout>
+    </android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
