--- a/app/src/main/res/layout/fragment_play_music.xml
+++ b/app/src/main/res/layout/fragment_play_music.xml
@@ -1,4 +1,5 @@
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -25,7 +26,7 @@
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/hidefragment"
-               android:background="@drawable/btn_action_bg_selector"
+               android:background="@drawable/button_ripple"
                android:src="@drawable/ic_down"/>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -60,10 +61,9 @@
 
         </android.support.v4.view.ViewPager>
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="15dp"
-            android:gravity="center_horizontal"
             android:layout_marginTop="5dp"
             android:orientation="horizontal">
 
@@ -77,9 +77,14 @@
                 android:id="@+id/second"
                 android:layout_width="10dp"
                 android:layout_height="10dp"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="10dp"
                 android:src="@drawable/ic_play_page_indicator_unselected" />
-        </RelativeLayout>
+            <SeekBar
+                android:layout_width="match_parent"
+                android:layout_height="15dp"
+                android:id="@+id/yinxiao"
+                />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -124,6 +129,7 @@
                 android:layout_height="60dp"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
+                android:background="@drawable/button_ripple"
                 android:src="@drawable/play_mode_level_list" />
 
             <ImageView
@@ -132,6 +138,7 @@
                 android:layout_height="80dp"
                 android:layout_alignParentTop="true"
                 android:layout_marginEnd="11dp"
+                android:background="@drawable/button_ripple"
                 android:layout_toStartOf="@+id/play_pause"
                 android:src="@drawable/play_btn_prev_selector" />
 
@@ -139,6 +146,7 @@
                 android:id="@+id/play_pause"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
+                android:background="@drawable/button_ripple"
                 android:layout_centerInParent="true"
                 android:src="@drawable/play_btn_play_pause_selector" />
 
@@ -148,6 +156,7 @@
                 android:layout_height="80dp"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="12dp"
+                android:background="@drawable/button_ripple"
                 android:layout_toEndOf="@+id/play_pause"
                 android:src="@drawable/play_btn_next_selector" />
 
@@ -157,6 +166,7 @@
                 android:id="@+id/play_list"
                 android:layout_alignParentTop="true"
                 android:layout_toEndOf="@+id/next"
+                android:background="@drawable/button_ripple"
                 android:scaleType="center"
                 android:src="@drawable/play_list_menu" />
         </RelativeLayout>
