--- a/app/src/main/res/drawable/btn_action_bg_selector.xml
+++ b/app/src/main/res/drawable/btn_action_bg_selector.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android"
     android:variablePadding="true">
-    <item android:drawable="@color/btpress" android:state_pressed="true" />
+    <item android:drawable="@color/white_8p" android:state_pressed="true" />
 
 </selector>
