--- a/app/src/main/res/layout/page1.xml
+++ b/app/src/main/res/layout/page1.xml
@@ -1,29 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     xmlns:lrc="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
     <com.vaiyee.hongmusic.CustomView.MyCircleView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/bantouming"
-        android:layout_gravity="center_horizontal|center_vertical"/>
+        android:layout_width="310dp"
+        android:layout_height="310dp"
+        android:id="@+id/btm"
+        android:layout_gravity="center"/>
     <ImageView
         android:id="@+id/play_bg"
         android:layout_width="300dp"
         android:src="@drawable/music_ic"
-        android:layout_gravity="center_horizontal|center_vertical"
+        android:layout_gravity="center"
         android:layout_height="300dp" />
     <me.wcy.lrcview.LrcView
         android:id="@+id/lrc_view_single"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
+        android:layout_height="60dp"
         lrc:lrcAnimationDuration="500"
         lrc:lrcCurrentTextColor="@color/blue"
-        lrc:lrcDividerHeight="10dp"
+        lrc:lrcDividerHeight="3dp"
         lrc:lrcNormalTextColor="@color/white"
-        lrc:lrcPadding="40dp"
-        lrc:lrcTextSize="@dimen/text_size_common"
+        lrc:lrcPadding="20dp"
+        lrc:lrcTextSize="15sp"
         android:layout_gravity="bottom"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="3dp"/>
 </FrameLayout>
