--- a/app/src/main/res/layout/play_list_layout.xml
+++ b/app/src/main/res/layout/play_list_layout.xml
@@ -2,6 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:background="#1A1A1A"
+        android:textColor="@color/white"
+        android:text="当前播放列表"
+        android:textSize="20sp"/>
 <ListView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
