--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -26,7 +26,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
-    <Button
+    <ImageView
         android:id="@+id/nav_button"
         android:layout_width="35dp"
         android:layout_height="35dp"
@@ -34,7 +34,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="10dp"
-        android:background="@drawable/ic_menu"
+        android:background="@drawable/button_ripple"
+        android:src="@drawable/ic_menu"
         android:layout_centerVertical="true"
         />
 </RelativeLayout>
