--- a/app/src/main/res/menu/left_item.xml
+++ b/app/src/main/res/menu/left_item.xml
@@ -8,7 +8,7 @@
         <item
             android:id="@+id/action_night"
             android:icon="@drawable/ic_menu_night"
-            android:title="更换主题" />
+            android:title="音效设置" />
         <item
             android:id="@+id/action_timer"
             android:icon="@drawable/ic_menu_timer"
