--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#00F5FF</color>
     <color name="white_8p">#14FFFFFF</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
@@ -10,7 +10,7 @@
     <color name="white_16p">#29FFFFFF</color>
     <color name="white_24p">#3DFFFFFF</color>
     <color name="white_50p">#80FFFFFF</color>
-    <color name="white_96p">#F5FFFFFF</color>
+    <color name="white_96p">#00000000</color>
     <color name="black">@android:color/black</color>
     <color name="black_50p">#80000000</color>
     <color name="red">#F44336</color>
