--- a/app/src/main/res/layout/activity_gedan.xml
+++ b/app/src/main/res/layout/activity_gedan.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:fitsSystemWindows="true"
     android:background="@drawable/button_style"
-    android:layout_height="match_parent"
-    tools:context="com.vaiyee.hongmusic.GedanActivity">
+    android:layout_height="match_parent">
 <android.support.design.widget.AppBarLayout
     android:layout_width="match_parent"
     android:fitsSystemWindows="true"
@@ -46,7 +45,7 @@
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
-               android:text="2018-3-27"
+               android:text=""
                android:textSize="15sp"
                android:id="@+id/publish_time"
                android:layout_margin="10dp"
@@ -75,5 +74,13 @@
         android:id="@+id/gedan_list"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
     </android.support.v7.widget.RecyclerView>
-
+  <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="bottom|center"
+      android:layout_marginBottom="5dp"
+      android:visibility="gone"
+      android:id="@+id/loading_footer">
+      <include layout="@layout/loading_footer"/>
+  </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
