--- a/app/src/main/res/anim/fragment_dimiss.xml
+++ b/app/src/main/res/anim/fragment_dimiss.xml
@@ -5,8 +5,13 @@
         android:fromAlpha="1"
         android:toAlpha="0"
         android:interpolator="@android:anim/decelerate_interpolator"/>
-    <translate
-        android:duration="200"
-        android:fromYDelta="0"
-        android:toYDelta="100%" />
+
+    <scale
+        android:duration="500"
+        android:pivotY="100%"
+        android:pivotX="50%"
+        android:fromXScale="1"
+        android:fromYScale="1"
+        android:toXScale="0"
+        android:toYScale="0"/>
 </set>
