--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -70,7 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#000000"
-            android:text="宏晨音乐--by:"/>
+            android:text="趣听音乐--by:"/>
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="25dp"
