--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -148,7 +148,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:singleLine="true"
-                    android:text="宏晨有你"
+                    android:text="趣听音乐"
                     android:textSize="25sp"
                     app:layout_constraintBottom_toTopOf="@+id/play_bar_geshou"
                     app:layout_constraintStart_toStartOf="parent"
@@ -161,7 +161,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
                     android:layout_marginTop="2dp"
-                    android:text="vaiyee"
+                    android:text="By-谢昌宏"
                     android:textColor="#8B4500"
                     android:textSize="15sp"
                     app:layout_constraintBottom_toBottomOf="parent"
