--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -85,6 +85,6 @@
         android:scaleType="center"
         android:id="@+id/open_geshou"
         android:background="@drawable/button_ripple"
-        android:backgroundTint="#FFC125"
+        app:backgroundTint="#FFC125"
         android:src="@drawable/geshou"/>
 </merge>
