1.使用LruCache优化图片缓存2.fragment使用懒加载优化重新创建视图导致的卡顿问题3.给滑动列表加入滑动动画

--- a/app/src/main/res/menu/left_item.xml
+++ b/app/src/main/res/menu/left_item.xml
@@ -20,7 +20,7 @@
         <item
             android:id="@+id/action_about"
             android:icon="@drawable/ic_menu_about"
-            android:title="关于宏晨音乐" />
+            android:title="关于趣听音乐" />
         <item
             android:id="@+id/myqq"
             android:icon="@drawable/ic_qq"
