--- a/app/src/main/res/layout/activity_geshou.xml
+++ b/app/src/main/res/layout/activity_geshou.xml
@@ -31,8 +31,8 @@
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:scaleType="center"
         android:id="@+id/search"
+        android:padding="12dp"
         android:background="@drawable/button_ripple"
         android:layout_alignParentEnd="true"
         android:src="@drawable/ic_menu_search"/>
