--- a/app/src/main/res/layout/activity_kaiping.xml
+++ b/app/src/main/res/layout/activity_kaiping.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     tools:context="com.vaiyee.hongmusic.KaipingActivity">
 <ImageView
     android:layout_width="match_parent"
@@ -20,4 +18,4 @@
         android:gravity="center"
         android:layout_gravity="bottom"
         android:text="本程序由谢昌宏本人独立编写制作完成，仅供学习交流不作商业用途"/>
-</FrameLayout>
+</merge>
