--- a/app/src/main/res/layout/fragment_play_music.xml
+++ b/app/src/main/res/layout/fragment_play_music.xml
@@ -26,6 +26,7 @@
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/hidefragment"
+               android:padding="12dp"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_down"/>
             <LinearLayout
