--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00F5FF</color>
+    <color name="colorPrimary">#ffffffff</color>
     <color name="white_8p">#14FFFFFF</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimaryDark">#ffffffff</color>
+    <color name="colorAccent">#00F5FF</color>
     <color name="colorbar">#00F5FF</color>
     <color name="btpress">#BA55D3</color>
     <color name="white">@android:color/white</color>
